Added model specific for one time password returned to the client application Changed the binding models on ui side

--- a/OneTimePassword-AngularClient/src/app/app.component.html
+++ b/OneTimePassword-AngularClient/src/app/app.component.html
@@ -15,5 +15,5 @@
 
 <div *ngIf="user.oneTimePassword">
   <div>{{user.oneTimePassword.value}}</div>
-  <div>{{user.oneTimePassword.validSeconds}}</div>
+  <div>{{user.oneTimePassword.expirationTime}}</div>
 </div>
