Decoupled communication with backend from frontend application into a new service

--- a/OneTimePassword-AngularClient/src/app/app.component.html
+++ b/OneTimePassword-AngularClient/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<div [hidden]="submitted">
+<div>
   <h1>One Time Password Form</h1>
   <form (ngSubmit)="onSubmit()" #oneTimePasswordForm="ngForm">
     <div class="form-group">
